[build-system]
requires = ["setuptools>64", "wheel", "pip>=22"]
build-backend = "setuptools.build_meta"

[project]
name = "flowchem"
version = "1.0.0a3"
description = "Flowchem is a library to control instruments and devices commonly found in chemistry labs via an interoperable web API."
readme = "README.md"
requires-python = ">=3.10"
license =  { text = "MIT" }
keywords = ["chemistry", "automation", "laboratory", "science"]
authors = [
    { name = "Dario Cambié", email = "2422614+dcambie@users.noreply.github.com" },
    { name = "Jakob Wolf", email = "Jakob.Wolf@mpikg.mpg.de" },
    { name = "Wei-Hsin Hsu", email = "Wei-hsin.Hsu@mpikg.mpg.de" },
]
maintainers = [
  { name = "Dario Cambié", email = "2422614+dcambie@users.noreply.github.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aioserial>=1.3.1",
    "anyio",
    "asyncua>=1.0.2",
    "bronkhorst-propar>=1.1.0",
    "click<=8.1.3", # Temporary due to https://github.com/pallets/click/issues/2558
    "fastapi>=0.100.0",
    "loguru>=0.7.0",
    "lxml>=4.9.2",
    "packaging>=23.1",
    "pint>=0.16.1,!=0.21", # See hgrecco/pint#1642
    "pydantic>=2.0.2",
    "pyserial>=3",
    "rich_click>=1.6.1",
    'tomli; python_version<"3.11"',
    "uvicorn>=0.19.0",
    "zeroconf>=0.71.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff>=0.0.252",
    "black",
    "pre-commit"
]
test = [
    "flowchem-test>=0.1a3",
    "flaky",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xprocess",
    "httpx",
    "requests",
]
phidget = [
    "phidget22>=1.7.20211005",
]
plot = [
    "matplotlib>=3.5.0",
]
docs = [
    "furo",
    "mistune==0.8.4", # Due to sphinx-contrib/openapi#121
    "myst-parser",
    "sphinx",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinxcontrib-openapi",
]
types = [
    "data-science-types",
    "types-lxml",
    "types-PyYAML",
    "types-requests",

]

[project.urls]
homepage = "https://github.com/cambiegroup/flowchem"
documentation = "https://flowchem.readthedocs.io"
repository = "https://github.com/cambiegroup/flowchem"

[project.scripts]
flowchem = "flowchem.__main__:main"
flowchem-autodiscover = "flowchem.utils.device_finder:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flowchem = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
addopts = "-m 'not HApump and not Spinsolve and not FlowIR and not KPump' --cov=flowchem --cov-fail-under=30"

markers = [
    "HApump: tests requiring a local HA Elite11 connected.",
    "Spinsolve: tests requiring a connection to Spinsolve.",
    "FlowIR: tests requiring a connection to a FlowIR.",
    "KPump: tests for Azura compact" ]

[tool.ruff]
line-length = 120
# Allow imports relative to the "src" and "test" directories.
src = ["src", "test"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]
