[metadata]
name = flowchem
version = 0.6.0
author = Dario Cambié, Jakob Wolf
author_email = dario.cambie@mpikg.mpg.de, jakob.wolf@mpikg.mpg.de
description = Flowchem is a python library to control a variety of instruments commonly found in chemistry labs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cambiegroup/flowchem
metadata_version = 2.2
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    pyserial
    pint
    pandas
    scipy
    numpy
    asyncua
    phidget22
    getmac
    lmfit
    nmrglue
    aioserial
    jsonschema
    pydantic
    lxml
    loguru
    networkx
    ipython
    altair
    aiofiles
    pyyaml
    bokeh
    graphviz
    ord-schema
    google-api-python-client
    rich
    ipywidgets
python_requires = >=3.8

;[options.entry_points]
;console_scripts =
;    flowchem=flowchem.cli:main
