[metadata]
name = flowchem
version = 0.0.7-post4
author = Dario Cambié, Jakob Wolf
author_email = dario.cambie@mpikg.mpg.de, jakob.wolf@mpikg.mpg.de
description = Flowchem is a python library to control a variety of instruments commonly found in chemistry labs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cambiegroup/flowchem
metadata_version = 2.2
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    aiofiles>=0.8.0
    aioserial>=1.3.0
    altair>=4.1.0
    asyncua>=0.9.92
    bokeh>=2.4.2
    fastapi>=0.65.2
    getmac>=0.8.2
    graphviz>=0.19
    ipython>=7.30.1
    ipywidgets>=7.6.5
    jsonschema>=4.2.1
    lmfit>=1.0.3
    loguru>=0.5.0
    lxml>=4.6.4
    matplotlib>=3.5.0
    networkx>=2.6.3
    nmrglue >= 0.8
    numpy>=1.20.3
    ord-schema>=0.3.0
    packaging>=21.3
    pandas>=1.0.0
    pint>=0.16.1
    pydantic>=1.8.2
    pyserial>=3
    pyyaml>=6.0
    scipy>=1.6.3, <1.8
    unsync>=1.0.0
    uvicorn>=0.13.4
    zeroconf>=0.36.2
    google-api-python-client
    rich
    ipywidgets
python_requires = >=3.8

[options.extras_require]
;nmr = nmrglue, lxml, matplotlib, packaging
;http = zeroconf, fastapi, uvicorn
phidget=phidget22>=1.7.20211005

; DEVELOPER DEPENDENCIES
dev = mypy
    flake8
    black
    isort
    pylint
    perflint
test = pytest
    pytest-asyncio
    pytest-cov

; ALL
all = phidget22>=1.7.20211005
    mypy
    flake8
    black
    pytest
    pytest-asyncio
    pytest-cov

;[options.entry_points]
;console_scripts =
;    flowchem=flowchem.cli:main
